--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,8 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 
 //Colours
-$blackColor: rgb(24, 24, 24);
-$whiteColor: rgb(221, 221, 221);
+$primary: #181818;
+$secondary: #dddddd;
+$error: #d32752;
+$info: #f6c31c;
 
 //Fonts
 $font: "Lato", sans-serif;
+$font-weight: (
+  "thin": 100,
+  "light": 300,
+  "regular": 400,
+  "heavy": 700,
+  "black": 900,
+);
+
+//Spacing
+$base-padding: 0.75rem;
+$base-margin: 0.75rem;
+
+//Border
+$base-border-thickness: 1px;
+$base-border-radius: 40px;
+
+//Box-shadow
+$base-box-shadow: 1px 3px 5px rgba(black, 0.1);
