--- a/client/src/styles/components/Navbar/Navbar.scss
+++ b/client/src/styles/components/Navbar/Navbar.scss
@@ -1,8 +1,8 @@
-@import "variables/Variables.scss";
+@import "../variables.scss";
 .navbar {
   width: 100%;
   height: 60px;
-  background-color: $blackColor;
+  background-color: $primary;
 
   .container {
     display: flex;
@@ -18,7 +18,7 @@
     }
 
     a {
-      color: $whiteColor;
+      color: $secondary;
       font-size: 25px;
       text-decoration: none;
       font-family: $titleFont;
