--- a/client/src/styles/pages/home/Home.css
+++ b/client/src/styles/pages/home/Home.css
@@ -1,14 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .home {
   width: 100vw;
-  height: 100vh;
-  background-color: rgb(24, 24, 24);
+  height: 90vh;
+  background-color: #181818;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.container {
+.home .container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,9 +22,10 @@
   flex-direction: column;
 }
 .text-container .main-text {
-  font-size: 3rem;
+  font-size: 5rem;
   text-align: center;
-  color: rgb(221, 221, 221);
+  color: #dddddd;
+  margin-bottom: 0;
 }
 .text-container .main-text .logo-small {
   font-weight: 100;
@@ -34,4 +34,21 @@
 .text-container .main-text .logo {
   font-weight: 300;
   font-style: bold;
+}
+.text-container hr {
+  border-style: dashed;
+  width: 80%;
+  border-color: #dddddd;
+}
+.text-container .secondary-text {
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: #dddddd;
+  width: 80%;
+  text-align: center;
+}
+
+.btn-container {
+  display: flex;
+  gap: 0 10px;
 }/*# sourceMappingURL=Home.css.map */
