--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 //Colours
 $primary: #181818;
 $secondary: #dddddd;
+$tetiary: #1a9da7;
 $error: #d32752;
 $info: #f6c31c;
 
@@ -25,4 +26,4 @@ $base-border-thickness: 1px;
 $base-border-radius: 40px;
 
 //Box-shadow
-$base-box-shadow: 1px 3px 5px rgba(black, 0.1);
+$base-box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
