--- a/client/src/styles/components/Navbar/Navbar.css
+++ b/client/src/styles/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   width: 100%;
   height: 60px;
-  background-color: rgb(24, 24, 24);
+  background-color: #181818;
 }
 .navbar .container {
   display: flex;
@@ -15,10 +15,9 @@
   font-weight: 300;
 }
 .navbar .container a {
-  color: rgb(221, 221, 221);
+  color: #dddddd;
   font-size: 25px;
   text-decoration: none;
-  font-family: "Lato", sans-serif;
   font-weight: bold;
   text-decoration: none;
 }
