--- a/client/src/styles/components/Navbar/Navbar.scss
+++ b/client/src/styles/components/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-@import "../variables.scss";
+@import "../../variables.scss";
 .navbar {
   width: 100%;
   height: 60px;
@@ -21,7 +21,6 @@
       color: $secondary;
       font-size: 25px;
       text-decoration: none;
-      font-family: $titleFont;
       font-weight: bold;
       text-decoration: none;
 
