--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -27,3 +27,4 @@ $base-border-radius: 40px;
 
 //Box-shadow
 $base-box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
+$small-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
