Client & Server CRUD Updated.

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $secondary: #dddddd;
 $tetiary: #1a9da7;
 $error: #d32752;
 $info: #f6c31c;
+$success: #12b828;
 
 //Fonts
 $font: "Lato", sans-serif;
