--- a/client/src/index.css
+++ b/client/src/index.css
@@ -143,4 +143,22 @@ input {
   transform: scale(1.05);
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   transition: ease-in 0.3s;
+}
+
+.btn-success {
+  cursor: pointer;
+  border: 0;
+  display: inline-block;
+  background-color: #12b828;
+  padding: 0.75rem 0;
+  text-align: center;
+  width: 130px;
+  font-size: 1.3rem;
+  color: #dddddd;
+}
+.btn-success:hover {
+  background-color: #0d8a1e;
+  transform: scale(1.05);
+  box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
+  transition: ease-in 0.3s;
 }/*# sourceMappingURL=index.css.map */
