--- a/client/src/styles/pages/dashboard/dashboard.css
+++ b/client/src/styles/pages/dashboard/dashboard.css
@@ -3,6 +3,7 @@
   min-height: 100vh;
   height: 100%;
   background-color: #dddddd;
+  padding-top: 4rem;
 }
 .dashboard .container {
   max-width: 740px;
@@ -17,4 +18,46 @@
   -moz-column-gap: 10px;
        column-gap: 10px;
   row-gap: 10px;
+}
+
+.profile {
+  width: 100%;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
+  background-color: #c4c4c4;
+}
+
+.profile-container {
+  width: 100%;
+  margin: 1.2rem 2.5rem;
+  display: flex;
+  align-items: center;
+}
+.profile-container .profile-img img {
+  width: 180px;
+  height: 180px;
+  border-radius: 5000px;
+  border: 1px solid black;
+}
+.profile-container .profile-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  margin-left: 1.2rem;
+}
+.profile-container .profile-info .profile-name-container .profile-name {
+  font-size: 2rem;
+}
+.profile-container .profile-info .profile-name-container button {
+  padding: 0.3rem 0.35rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+.profile-container .profile-info .profile-name-container .action-btns {
+  display: flex;
+  gap: 0 5px;
+}
+.profile-container .profile-info .profile-description {
+  font-weight: 300;
 }/*# sourceMappingURL=dashboard.css.map */
