--- a/client/src/styles/utils/_button.scss
+++ b/client/src/styles/utils/_button.scss
@@ -6,6 +6,7 @@ $btn-colors: (
   "tetiary": $tetiary,
   "error": $error,
   "info": $info,
+  "success": $success,
 );
 
 @mixin btn($bg-color: $primary) {
