--- a/client/src/styles/_base.scss
+++ b/client/src/styles/_base.scss
@@ -8,8 +8,20 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 .container {
   max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+.container-small {
+  max-width: 740px;
   margin: 0 auto;
   padding: 0 40px;
 }
