--- a/client/src/styles/_breakpoints.scss
+++ b/client/src/styles/_breakpoints.scss
@@ -1,5 +1,5 @@
 $breakpoints: (
-  "xs": 0px,
+  "xs": 479px,
   "sm": 480px,
   "md": 720px,
   "lg": 960px,
@@ -7,31 +7,31 @@ $breakpoints: (
 );
 
 @mixin xs {
-  @media (min-width: map-get($breakpoints, "xs")) {
+  @media (max-width: map-get($breakpoints, "xs")) {
     @content;
   }
 }
 
 @mixin sm {
-  @media (min-width: map-get($breakpoints, "sm")) {
+  @media (max-width: map-get($breakpoints, "sm")) {
     @content;
   }
 }
 
 @mixin md {
-  @media (min-width: map-get($breakpoints, "md")) {
+  @media (max-width: map-get($breakpoints, "md")) {
     @content;
   }
 }
 
 @mixin lg {
-  @media (min-width: map-get($breakpoints, "lg")) {
+  @media (max-width: map-get($breakpoints, "lg")) {
     @content;
   }
 }
 
 @mixin xl {
-  @media (min-width: map-get($breakpoints, "xl")) {
+  @media (max-width: map-get($breakpoints, "xl")) {
     @content;
   }
 }
