--- a/client/src/styles/components/Card/Card.css
+++ b/client/src/styles/components/Card/Card.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .card {
+  position: relative;
   height: 250px;
   width: 100%;
   display: flex;
@@ -13,8 +14,8 @@
   color: #181818;
 }
 .card:hover {
-  border: 1px solid #181818;
-  transition: ease 0.5s;
+  border-left: 3px solid #1a9da7;
+  transition: ease 0.3s;
 }
 
 .card-header {
@@ -26,9 +27,29 @@
   font-weight: 300;
 }
 
-.card-tetiary .trash-icon {
+.card-tetiary {
+  display: flex;
+  gap: 0 10px;
+  width: 100%;
   color: #919191;
+}
+.card-tetiary .pencil-icon {
+  position: absolute;
+  top: -0.6rem;
+  right: -0.6rem;
   padding: 4px;
+  font-size: 1.5rem;
+  border-radius: 1000px;
+  color: #1a9da7;
+  border: 1px solid #1a9da7;
+}
+.card-tetiary .pencil-icon:hover {
+  background-color: #1a9da7;
+  color: white;
+}
+.card-tetiary .trash-icon {
+  padding: 4px;
+  font-size: 1.5rem;
   border-radius: 1000px;
 }
 .card-tetiary .trash-icon:hover {
