--- a/client/src/styles/components/Modal/Modal.css
+++ b/client/src/styles/components/Modal/Modal.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 120%;
+  height: 200vh;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   margin: auto;
   left: 0;
   right: 0;
@@ -22,12 +22,20 @@
 }
 
 .modal {
-  min-width: 400px;
+  max-width: 400px;
+  width: 70%;
   display: flex;
   color: #dddddd;
-  background-color: #181818;
+  background-color: #dbdbdb;
+  color: black;
   padding: 1.5rem 3rem;
   flex-direction: column;
+}
+@media (max-width: 480px) {
+  .modal {
+    min-width: 0;
+    width: 70%;
+  }
 }
 .modal .modal-close {
   background-color: #d32752;
@@ -60,4 +68,23 @@
 }
 .modal .modal-fields input {
   padding: 0.7rem 0;
+  background-color: #ffffff;
+}
+
+.dialogue-box {
+  padding: 1rem 2rem;
+  background-color: #dbdbdb;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.dialogue-box .modal-close {
+  display: none;
+}
+.dialogue-box .btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }/*# sourceMappingURL=Modal.css.map */
