--- a/client/src/styles/components/Modal/Modal.scss
+++ b/client/src/styles/components/Modal/Modal.scss
@@ -1,4 +1,5 @@
 @use "../../variables" as var;
+@use "../../breakpoints" as break;
 
 .modal-bg {
   position: absolute;
@@ -6,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 120%;
+  height: 200vh;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -14,7 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   margin: auto;
   left: 0;
   right: 0;
@@ -23,12 +24,19 @@
 }
 
 .modal {
-  min-width: 400px;
+  max-width: 400px;
+  width: 70%;
   display: flex;
   color: var.$secondary;
-  background-color: var.$primary;
+  background-color: #dbdbdb;
+  color: black;
   padding: 1.5rem 3rem;
   flex-direction: column;
+
+  @include break.sm {
+    min-width: 0;
+    width: 70%;
+  }
 
   .modal-close {
     background-color: var.$error;
@@ -61,6 +69,27 @@
 
     input {
       padding: 0.7rem 0;
+      background-color: #ffffff;
     }
+  }
+}
+
+.dialogue-box {
+  padding: 1rem 2rem;
+  background-color: #dbdbdb;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .modal-close {
+    display: none;
+  }
+
+  .btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
   }
 }
