--- a/client/src/styles/components/Navbar/Navbar.scss
+++ b/client/src/styles/components/Navbar/Navbar.scss
@@ -1,8 +1,10 @@
-@import "../../variables.scss";
+@use "../../breakpoints" as break;
+@use "../../variables.scss" as var;
+
 .navbar {
   width: 100%;
   height: 60px;
-  background-color: $primary;
+  background-color: var.$primary;
 
   .container {
     display: flex;
@@ -10,15 +12,67 @@
     align-items: center;
     height: 100%;
 
-    .nav-links {
-      a {
-        margin: 0 20px;
-        font-weight: 300;
+    .logout {
+      font-weight: map-get(var.$font-weight, "light");
+      cursor: pointer;
+
+      &:hover {
+        color: var.$tetiary;
       }
     }
 
+    .nav-links {
+      display: flex;
+      gap: 0 40px;
+
+      @include break.lg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        transition: 0.6s;
+        transform: translateY(-100vh);
+        align-items: center;
+        justify-content: center;
+        background-color: var.$primary;
+        flex-direction: column;
+        gap: 2rem 0;
+        text-align: center;
+      }
+
+      a {
+        font-weight: 300;
+
+        &:hover {
+          color: var.$tetiary;
+        }
+      }
+    }
+
+    .nav-btn {
+      background: transparent;
+      color: var.$secondary;
+      opacity: 0;
+      font-size: 1.4rem;
+      display: flex;
+      align-items: center;
+
+      @include break.lg {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
+    .nav-close-btn {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      font-size: 2rem;
+    }
+
     a {
-      color: $secondary;
+      color: var.$secondary;
       font-size: 25px;
       text-decoration: none;
       font-weight: bold;
@@ -29,5 +83,12 @@
         font-style: italic;
       }
     }
+  }
+}
+
+.responsive_nav {
+  @include break.lg {
+    z-index: 99;
+    transform: none !important;
   }
 }
