--- a/client/src/styles/pages/dashboard/dashboard.css
+++ b/client/src/styles/pages/dashboard/dashboard.css
@@ -15,15 +15,40 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(auto, 1fr);
-  -moz-column-gap: 10px;
-       column-gap: 10px;
-  row-gap: 10px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  row-gap: 30px;
+}
+@media (max-width: 720px) {
+  .row {
+    grid-template-columns: repeat(1, 100%);
+  }
+  .row .card {
+    padding-bottom: 4rem;
+  }
+}
+.row .card {
+  cursor: pointer;
+}
+.row .card .card-author {
+  font-size: 1.1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.row .card .card-author:hover {
+  color: #1a9da7;
 }
 
 .profile {
   width: 100%;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
-  background-color: #c4c4c4;
+  background: linear-gradient(170deg, #c4c4c4, #d8d8d8);
+  padding: 1.1rem 0;
+}
+.profile:hover {
+  border-left: 3px solid #1a9da7;
+  transition: ease 0.3s;
 }
 
 .profile-container {
@@ -48,6 +73,19 @@
 }
 .profile-container .profile-info .profile-name-container .profile-name {
   font-size: 2rem;
+  margin-bottom: 10px;
+}
+.profile-container .profile-info .profile-name-container .profile-username {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-top: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.profile-container .profile-info .profile-name-container .profile-username:hover {
+  color: #1a9da7;
+  cursor: pointer;
 }
 .profile-container .profile-info .profile-name-container button {
   padding: 0.3rem 0.35rem;
@@ -58,6 +96,54 @@
   display: flex;
   gap: 0 5px;
 }
+.profile-container .profile-info .profile-name-container .action-btns .btn-add-note {
+  position: fixed;
+  bottom: 10vh;
+  right: 5%;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  padding: 10px;
+  font-size: 3rem;
+  text-align: center;
+  border-radius: 1000px;
+  display: flex;
+  align-items: center;
+  z-index: 98;
+}
+@media (max-width: 720px) {
+  .profile-container .profile-info .profile-name-container .action-btns .btn-add-note {
+    bottom: 40vh;
+  }
+}
 .profile-container .profile-info .profile-description {
   font-weight: 300;
+}
+@media (max-width: 720px) {
+  .profile-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+  }
+  .profile-container .profile-info {
+    margin-left: 0;
+  }
+  .profile-container .profile-info .profile-description {
+    padding: 0 2rem;
+  }
+  .profile-container .profile-info .profile-name-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .profile-container .profile-info .profile-name-container button {
+    font-size: 0.8rem;
+  }
 }/*# sourceMappingURL=dashboard.css.map */
