--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $primary: #181818;
 $secondary: #dddddd;
 $tetiary: #1a9da7;
 $error: #d32752;
-$info: #f6c31c;
+$info: #cfa108;
 $success: #12b828;
 
 //Fonts
