--- a/client/src/styles/components/Card/Card.css
+++ b/client/src/styles/components/Card/Card.css
@@ -22,6 +22,15 @@
   font-size: 1.4rem;
   text-transform: capitalize;
 }
+.card-header .card-title {
+  cursor: pointer;
+}
+.card-header .card-title:hover {
+  color: #1a9da7;
+}
+.card-header .card-author {
+  cursor: pointer;
+}
 .card-header p {
   font-size: 0.8rem;
   font-weight: 300;
