--- a/client/src/styles/pages/dashboard/dashboard.css
+++ b/client/src/styles/pages/dashboard/dashboard.css
@@ -27,10 +27,8 @@
     padding-bottom: 4rem;
   }
 }
-.row .card {
-  cursor: pointer;
-}
 .row .card .card-author {
+  position: relative;
   font-size: 1.1rem;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -41,7 +39,12 @@
 }
 
 .profile {
+  position: relative;
   width: 100%;
+  height: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
   background: linear-gradient(170deg, #c4c4c4, #d8d8d8);
   padding: 1.1rem 0;
@@ -57,11 +60,44 @@
   display: flex;
   align-items: center;
 }
+.profile-container .profile-img {
+  position: relative;
+  transition: 0.7s ease-in;
+}
+.profile-container .profile-img:hover {
+  transition: 0.7s ease-in;
+  opacity: 0.7;
+}
+.profile-container .profile-img:hover .profile-img-logo {
+  opacity: 1;
+  transition: 0.7s ease-in;
+  pointer-events: none;
+}
+.profile-container .profile-img .profile-img-logo {
+  position: absolute;
+  margin: auto;
+  right: 0%;
+  top: 0%;
+  left: 0%;
+  bottom: 0%;
+  color: black;
+  z-index: 99;
+  width: 90px;
+  height: 90px;
+  opacity: 0;
+  transition: 0.7s ease-in;
+}
 .profile-container .profile-img img {
   width: 180px;
   height: 180px;
   border-radius: 5000px;
-  border: 1px solid black;
+  border: 3px solid black;
+  cursor: pointer;
+  transition: 0.7s ease-in;
+}
+.profile-container .profile-img img:hover {
+  transition: 0.7s ease-in;
+  opacity: 0.7;
 }
 .profile-container .profile-info {
   display: flex;
@@ -96,6 +132,23 @@
   display: flex;
   gap: 0 5px;
 }
+.profile-container .profile-info .profile-name-container .action-btns .btn-edit-profile {
+  display: flex;
+  justify-content: center;
+  border-radius: 1000px;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+  align-items: center;
+  position: absolute;
+  top: -5%;
+  right: -3%;
+  padding: 10px;
+}
+.profile-container .profile-info .profile-name-container .action-btns .btn-edit-profile .pencil-icon {
+  width: 30px;
+  height: 30px;
+}
 .profile-container .profile-info .profile-name-container .action-btns .btn-add-note {
   position: fixed;
   bottom: 10vh;
@@ -120,6 +173,8 @@
   }
 }
 .profile-container .profile-info .profile-description {
+  word-wrap: break-word;
+  width: 90%;
   font-weight: 300;
 }
 @media (max-width: 720px) {
