--- a/client/src/styles/pages/dashboard/dashboard.scss
+++ b/client/src/styles/pages/dashboard/dashboard.scss
@@ -29,11 +29,8 @@
   }
 
   .card {
-    cursor: pointer;
-
     .card-author {
       position: relative;
-      z-index: 99;
       font-size: 1.1rem;
       width: fit-content;
 
@@ -45,7 +42,10 @@
 }
 
 .profile {
+  position: relative;
   width: 100%;
+  height: 100%;
+  height: max-content;
   box-shadow: var.$small-box-shadow;
   background: linear-gradient(
     170deg,
@@ -66,11 +66,50 @@
   display: flex;
   align-items: center;
 
+  .profile-img {
+    position: relative;
+
+    transition: 0.7s ease-in;
+
+    &:hover {
+      transition: 0.7s ease-in;
+      opacity: 0.7;
+
+      .profile-img-logo {
+        opacity: 1;
+        transition: 0.7s ease-in;
+        pointer-events: none;
+      }
+    }
+
+    .profile-img-logo {
+      position: absolute;
+      margin: auto;
+      right: 0%;
+      top: 0%;
+      left: 0%;
+      bottom: 0%;
+      color: black;
+      z-index: 99;
+      width: 90px;
+      height: 90px;
+      opacity: 0;
+      transition: 0.7s ease-in;
+    }
+  }
+
   .profile-img img {
     width: 180px;
     height: 180px;
     border-radius: 5000px;
-    border: 1px solid black;
+    border: 3px solid black;
+    cursor: pointer;
+    transition: 0.7s ease-in;
+
+    &:hover {
+      transition: 0.7s ease-in;
+      opacity: 0.7;
+    }
   }
 
   .profile-info {
@@ -109,6 +148,23 @@
         display: flex;
         gap: 0 5px;
 
+        .btn-edit-profile {
+          display: flex;
+          justify-content: center;
+          border-radius: 1000px;
+          width: min-content;
+          align-items: center;
+          position: absolute;
+          top: -5%;
+          right: -3%;
+          padding: 10px;
+
+          .pencil-icon {
+            width: 30px;
+            height: 30px;
+          }
+        }
+
         .btn-add-note {
           position: fixed;
           bottom: 10vh;
@@ -131,6 +187,8 @@
     }
 
     .profile-description {
+      word-wrap: break-word;
+      width: 90%;
       font-weight: map-get(var.$font-weight, "light");
     }
   }
