--- a/client/src/styles/components/Card/Card.scss
+++ b/client/src/styles/components/Card/Card.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   padding: 1.3rem 3rem;
+  border-radius: 30px;
   box-shadow: var.$small-box-shadow;
   flex-direction: column;
   width: fit-content;
