--- a/client/src/styles/components/Navbar/Navbar.css
+++ b/client/src/styles/components/Navbar/Navbar.css
@@ -46,11 +46,13 @@
 }
 .navbar .container .nav-btn {
   background: transparent;
+  display: none;
   color: #dddddd;
   opacity: 0;
   font-size: 1.4rem;
   display: flex;
   align-items: center;
+  display: none !important;
 }
 @media (max-width: 960px) {
   .navbar .container .nav-btn {
@@ -74,6 +76,15 @@
 .navbar .container a span {
   font-weight: 300;
   font-style: italic;
+}
+
+button {
+  display: none;
+}
+@media (max-width: 960px) {
+  button {
+    display: none;
+  }
 }
 
 @media (max-width: 960px) {
