--- a/client/src/styles/components/Card/Card.css
+++ b/client/src/styles/components/Card/Card.css
@@ -5,6 +5,7 @@
   width: 100%;
   display: flex;
   padding: 1.3rem 3rem;
+  border-radius: 30px;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
   flex-direction: column;
   width: -webkit-fit-content;
