--- a/client/src/styles/components/Loading/Loading.css
+++ b/client/src/styles/components/Loading/Loading.css
@@ -1,4 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
+.bg-primary {
+  background-color: #181818;
+}
+
+.bg-primary-darken {
+  background-color: black;
+}
+
+.bg-secondary {
+  background-color: #dddddd;
+}
+
+.bg-secondary-darken {
+  background-color: #c4c4c4;
+}
+
+.bg-tetiary {
+  background-color: #1a9da7;
+}
+
+.bg-tetiary-darken {
+  background-color: #13747b;
+}
+
 .spinner {
   top: calc(50% - 15px);
   left: calc(50% - 15px);
@@ -27,6 +51,13 @@
   background: #181818;
 }
 
+.bar {
+  -webkit-animation: bar 0.75s linear infinite;
+          animation: bar 0.75s linear infinite;
+  width: 100%;
+  height: 100%;
+}
+
 @-webkit-keyframes spinner {
   0% {
     transform: rotate(0deg);
@@ -42,5 +73,21 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes bar {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
+  }
+}
+@keyframes bar {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
   }
 }/*# sourceMappingURL=Loading.css.map */
