--- a/client/src/styles/components/Modal/Modal.css
+++ b/client/src/styles/components/Modal/Modal.css
@@ -87,4 +87,11 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+}
+
+.file-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=Modal.css.map */
