--- a/client/src/styles/components/Modal/Modal.scss
+++ b/client/src/styles/components/Modal/Modal.scss
@@ -93,3 +93,10 @@
     gap: 20px;
   }
 }
+
+.file-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
