--- a/client/src/styles/pages/dashboard/dashboard.css
+++ b/client/src/styles/pages/dashboard/dashboard.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .dashboard {
+  position: relative;
   min-height: 100vh;
   height: 100%;
   background-color: #dddddd;
@@ -7,6 +8,20 @@
 }
 .dashboard .container {
   max-width: 740px;
+}
+
+.loading-container {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  font-size: 1rem;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.loading-container h3 {
+  font-weight: 300;
 }
 
 .row {
