--- a/client/src/styles/pages/dashboard/dashboard.scss
+++ b/client/src/styles/pages/dashboard/dashboard.scss
@@ -2,12 +2,28 @@
 @use "../../breakpoints" as break;
 
 .dashboard {
+  position: relative;
   min-height: 100vh;
   height: 100%;
   background-color: var.$secondary;
   padding-top: 4rem;
   .container {
     max-width: 740px;
+  }
+}
+
+.loading-container {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  font-size: 1rem;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  h3 {
+    font-weight: map-get(var.$font-weight, "light");
   }
 }
 
