--- a/client/src/styles/pages/register/register.css
+++ b/client/src/styles/pages/register/register.css
@@ -1,6 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
+.register {
+  padding: 4rem 0;
+}
 .register .login-card {
-  max-width: 400px;
+  max-width: 300px;
   padding: 1.3rem 2.75rem;
   margin-top: 1.5rem;
 }
@@ -29,4 +32,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px 0;
+}
+.register .register-divider {
+  border: 1px solid #dddddd;
+  width: 100%;
 }/*# sourceMappingURL=register.css.map */
