--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -47,6 +47,13 @@ input {
   font-style: italic;
 }
 
+.loading {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pwd-requisites {
   color: #d32752;
 }
@@ -72,7 +79,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
 }
 
@@ -85,7 +92,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   background-color: black;
 }
@@ -105,7 +112,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   color: #181818;
 }
@@ -125,7 +132,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   color: #dddddd;
 }
@@ -145,7 +152,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   color: #dddddd;
 }
@@ -165,7 +172,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   color: #dddddd;
 }
@@ -185,7 +192,7 @@ input {
   text-align: center;
   width: 130px;
   padding: 10px 0;
-  border-radius: 30px;
+  border-radius: 5px;
   font-size: 1.3rem;
   color: #dddddd;
 }
