--- a/app/client/src/styles/components/Card/Card.css
+++ b/app/client/src/styles/components/Card/Card.css
@@ -1,18 +1,17 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .card {
   position: relative;
-  height: 250px;
-  width: 100%;
+  min-height: 250px;
   display: flex;
   padding: 1.3rem 3rem;
-  border-radius: 30px;
+  border-radius: 5px;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
   flex-direction: column;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  background-color: #f7f7f7;
-  color: #181818;
+  background-color: #181818;
+  color: #dddddd;
 }
 .card:hover {
   border-left: 3px solid #1a9da7;
