--- a/app/client/src/styles/components/Modal/Modal.css
+++ b/app/client/src/styles/components/Modal/Modal.css
@@ -22,6 +22,7 @@
 }
 
 .modal {
+  position: relative;
   max-width: 400px;
   width: 70%;
   display: flex;
@@ -30,6 +31,9 @@
   color: black;
   padding: 1.5rem 3rem;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
 }
 @media (max-width: 480px) {
   .modal {
@@ -49,6 +53,10 @@
   height: fit-content;
   color: white;
   font-size: 1.2rem;
+  border-radius: 2000px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
   border: none;
   cursor: pointer;
 }
@@ -89,9 +97,12 @@
   gap: 20px;
 }
 
-.file-container {
+.file-upload-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+.file-upload-container input {
+  flex-shrink: 1;
 }/*# sourceMappingURL=Modal.css.map */
