--- a/app/client/src/styles/pages/dashboard/dashboard.css
+++ b/app/client/src/styles/pages/dashboard/dashboard.css
@@ -2,12 +2,21 @@
 .dashboard {
   position: relative;
   min-height: 100vh;
-  height: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
   background-color: #dddddd;
-  padding-top: 4rem;
+  padding-bottom: 3rem;
 }
 .dashboard .container {
   max-width: 740px;
+}
+
+.bg-pattern {
+  margin-bottom: -130px;
+  height: 200px;
+  width: 100vw;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg clip-path='url(%26quot%3b%23SvgjsClipPath1014%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(14%2c 13%2c 13%2c 1)'%3e%3c/rect%3e%3ccircle r='93.335' cx='30.98' cy='26' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='93.335' cx='285.49' cy='282.59' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='93.335' cx='835.95' cy='689.89' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='60.655' cx='215.5' cy='91.86' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='102.92' cx='541.56' cy='49.93' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='101.675' cx='448.47' cy='48.33' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='89.88' cx='1300.59' cy='497.32' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='159.095' cx='460.3' cy='422.11' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='50.1' cx='1329.46' cy='54.29' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='184.7' cx='423.14' cy='322.51' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='147.375' cx='128.36' cy='552.3' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='112.78' cx='948.07' cy='261.39' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='69.125' cx='649.67' cy='85.37' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='134.805' cx='123.15' cy='483.76' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='89.64' cx='496.24' cy='118.22' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='72.04' cx='1264' cy='395.02' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='171.47' cx='331.56' cy='427.72' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='179.505' cx='1283.32' cy='409.96' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='93.425' cx='264.52' cy='138.1' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='73.765' cx='281.15' cy='415.92' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='120.14' cx='1155.94' cy='396.06' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='82.285' cx='703.63' cy='92.28' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='112.37' cx='74.4' cy='27.63' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='142.795' cx='1115.99' cy='63.83' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='179.35' cx='23.62' cy='178.18' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='151.61' cx='477.22' cy='556.51' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='184.75' cx='946.5' cy='283.27' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='167.19' cx='204.39' cy='128.75' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='122.075' cx='962.1' cy='447.87' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='89.12' cx='1134.53' cy='420.18' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='55.71' cx='1092.38' cy='357.25' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='76.25' cx='1148.26' cy='50.08' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='104.51' cx='305.34' cy='270.88' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='155.25' cx='289.72' cy='385.67' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='92.7' cx='840.64' cy='316.11' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='167.405' cx='848.11' cy='38.93' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='179.22' cx='1070.74' cy='360.95' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='159.745' cx='156.95' cy='214.76' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='89.765' cx='1435.27' cy='248.38' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3ccircle r='115.09' cx='471.25' cy='474.27' stroke='%23181818' stroke-opacity='1' stroke-width='2'%3e%3c/circle%3e%3c/g%3e%3cdefs%3e%3cclipPath id='SvgjsClipPath1014'%3e%3crect width='1440' height='560' x='0' y='0'%3e%3c/rect%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e");
 }
 
 .loading-container {
@@ -28,7 +37,7 @@
   padding: 4rem 0;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(auto, 1fr);
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -57,16 +66,15 @@
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.32);
-  background: linear-gradient(170deg, #c4c4c4, #d8d8d8);
+  background-color: #181818;
+  color: white;
   padding: 1.1rem 0;
-}
-.profile:hover {
-  border-left: 3px solid #1a9da7;
-  transition: ease 0.3s;
+  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.171);
 }
 
 .profile-container {
@@ -77,15 +85,15 @@
 }
 .profile-container .profile-img {
   position: relative;
-  transition: 0.7s ease-in;
+  transition: 0.4s ease-in;
 }
 .profile-container .profile-img:hover {
-  transition: 0.7s ease-in;
+  transition: 0.4s ease-in;
   opacity: 0.7;
 }
 .profile-container .profile-img:hover .profile-img-logo {
   opacity: 1;
-  transition: 0.7s ease-in;
+  transition: 0.4s ease-in;
   pointer-events: none;
 }
 .profile-container .profile-img .profile-img-logo {
@@ -95,18 +103,18 @@
   top: 0%;
   left: 0%;
   bottom: 0%;
-  color: black;
+  color: white;
   z-index: 99;
   width: 90px;
   height: 90px;
   opacity: 0;
-  transition: 0.7s ease-in;
+  transition: 0.4s ease-in;
 }
 .profile-container .profile-img img {
   width: 180px;
   height: 180px;
   border-radius: 5000px;
-  border: 3px solid black;
+  border: 3px solid white;
   cursor: pointer;
   transition: 0.7s ease-in;
 }
@@ -146,6 +154,12 @@
 .profile-container .profile-info .profile-name-container .action-btns {
   display: flex;
   gap: 0 5px;
+}
+@media (max-width: 480px) {
+  .profile-container .profile-info .profile-name-container .action-btns {
+    flex-direction: column;
+    gap: 15px 0;
+  }
 }
 .profile-container .profile-info .profile-name-container .action-btns .btn-edit-profile {
   display: flex;
@@ -216,4 +230,13 @@
   .profile-container .profile-info .profile-name-container button {
     font-size: 0.8rem;
   }
+}
+
+.pagination-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 0 30px;
+  padding-top: 2rem;
+  align-items: center;
 }/*# sourceMappingURL=dashboard.css.map */
