--- a/app/client/src/styles/pages/dashboard/dashboard.scss
+++ b/app/client/src/styles/pages/dashboard/dashboard.scss
@@ -1,15 +1,23 @@
-@use "../../variables" as var;
-@use "../../breakpoints" as break;
+@use '../../variables' as var;
+@use '../../breakpoints' as break;
 
 .dashboard {
   position: relative;
   min-height: 100vh;
-  height: 100%;
+  height: max-content;
   background-color: var.$secondary;
-  padding-top: 4rem;
+  padding-bottom: 3rem;
+
   .container {
     max-width: 740px;
   }
+}
+
+.bg-pattern {
+  margin-bottom: -130px;
+  height: 200px;
+  width: 100vw;
+  background-image: var.$circle-bg;
 }
 
 .loading-container {
@@ -23,7 +31,7 @@
   flex-direction: column;
 
   h3 {
-    font-weight: map-get(var.$font-weight, "light");
+    font-weight: map-get(var.$font-weight, 'light');
   }
 }
 
@@ -31,7 +39,8 @@
   padding: 4rem 0;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, auto);
+
   grid-template-rows: repeat(auto, 1fr);
   column-gap: 30px;
   row-gap: 30px;
@@ -59,21 +68,16 @@
 
 .profile {
   position: relative;
+  // top: -130px;
   width: 100%;
   height: 100%;
+  border-radius: var.$base-border-radius;
   height: max-content;
   box-shadow: var.$small-box-shadow;
-  background: linear-gradient(
-    170deg,
-    darken(var.$secondary, 10%),
-    darken(var.$secondary, 2%)
-  );
+  background-color: var.$primary;
+  color: white;
   padding: 1.1rem 0;
-
-  &:hover {
-    border-left: 3px solid var.$tetiary;
-    transition: ease 0.3s;
-  }
+  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.171);
 }
 
 .profile-container {
@@ -85,15 +89,15 @@
   .profile-img {
     position: relative;
 
-    transition: 0.7s ease-in;
+    transition: 0.4s ease-in;
 
     &:hover {
-      transition: 0.7s ease-in;
+      transition: 0.4s ease-in;
       opacity: 0.7;
 
       .profile-img-logo {
         opacity: 1;
-        transition: 0.7s ease-in;
+        transition: 0.4s ease-in;
         pointer-events: none;
       }
     }
@@ -105,12 +109,12 @@
       top: 0%;
       left: 0%;
       bottom: 0%;
-      color: black;
+      color: white;
       z-index: 99;
       width: 90px;
       height: 90px;
       opacity: 0;
-      transition: 0.7s ease-in;
+      transition: 0.4s ease-in;
     }
   }
 
@@ -118,7 +122,7 @@
     width: 180px;
     height: 180px;
     border-radius: 5000px;
-    border: 3px solid black;
+    border: 3px solid white;
     cursor: pointer;
     transition: 0.7s ease-in;
 
@@ -144,7 +148,7 @@
 
       .profile-username {
         font-size: 1rem;
-        font-weight: map-get(var.$font-weight, "light");
+        font-weight: map-get(var.$font-weight, 'light');
         margin-top: 0;
         width: fit-content;
 
@@ -157,12 +161,17 @@
       button {
         padding: 0.3rem 0.35rem;
         font-size: 0.8rem;
-        font-weight: map-get(var.$font-weight, "heavy");
+        font-weight: map-get(var.$font-weight, 'heavy');
       }
 
       .action-btns {
         display: flex;
         gap: 0 5px;
+
+        @include break.sm {
+          flex-direction: column;
+          gap: 15px 0;
+        }
 
         .btn-edit-profile {
           display: flex;
@@ -205,7 +214,7 @@
     .profile-description {
       word-wrap: break-word;
       width: 90%;
-      font-weight: map-get(var.$font-weight, "light");
+      font-weight: map-get(var.$font-weight, 'light');
     }
   }
 
@@ -235,4 +244,14 @@
       }
     }
   }
+}
+
+.pagination-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 0 30px;
+  padding-top: 2rem;
+
+  align-items: center;
 }
