FEAT: Linked server error handling to client.

--- a/app/client/src/styles/_base.scss
+++ b/app/client/src/styles/_base.scss
@@ -63,10 +63,9 @@ input {
 }
 
 .error-message {
-  background-color: $error;
-  color: white;
+  color: $error;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: normal;
   text-align: center;
   padding: 2px 2rem;
 }
