--- a/app/client/src/styles/_variables.scss
+++ b/app/client/src/styles/_variables.scss
@@ -5,8 +5,8 @@ $circle-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' ve
 //Colours
 $primary: #181818;
 $secondary: #dddddd;
-$tetiary: #1a9da7;
-$error: #d32752;
+$tetiary: #1a40a7;
+$error: #e91818;
 $info: #cfa108;
 $success: #12b828;
 
