--- a/app/client/src/styles/pages/login/login.css
+++ b/app/client/src/styles/pages/login/login.css
@@ -38,6 +38,6 @@
   background-color: #d0d0d0;
 }
 .login-card .register-link {
-  color: #1a9da7;
+  color: #1a40a7;
   text-decoration: underline;
 }/*# sourceMappingURL=login.css.map */
