--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -55,17 +55,16 @@ input {
 }
 
 .pwd-requisites {
-  color: #d32752;
+  color: #e91818;
 }
 .pwd-requisites .valid {
   color: #12b828;
 }
 
 .error-message {
-  background-color: #d32752;
-  color: white;
+  color: #e91818;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: normal;
   text-align: center;
   padding: 2px 2rem;
 }
@@ -127,7 +126,7 @@ input {
   cursor: pointer;
   border: 0;
   display: inline-block;
-  background-color: #1a9da7;
+  background-color: #1a40a7;
   padding: 0.75rem 0;
   text-align: center;
   width: 130px;
@@ -137,7 +136,7 @@ input {
   color: #dddddd;
 }
 .btn-tetiary:hover {
-  background-color: #13747b;
+  background-color: #132f7b;
   transform: scale(1.05);
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   transition: ease-in 0.3s;
@@ -147,7 +146,7 @@ input {
   cursor: pointer;
   border: 0;
   display: inline-block;
-  background-color: #d32752;
+  background-color: #e91818;
   padding: 0.75rem 0;
   text-align: center;
   width: 130px;
@@ -157,7 +156,7 @@ input {
   color: #dddddd;
 }
 .btn-error:hover {
-  background-color: #a81f41;
+  background-color: #bc1212;
   transform: scale(1.05);
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   transition: ease-in 0.3s;
