--- a/app/client/src/styles/pages/login/login.css
+++ b/app/client/src/styles/pages/login/login.css
@@ -17,7 +17,7 @@
   padding: 3.5rem 2.75rem;
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   background-color: #181818;
-  width: 100%;
+  width: 290px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,6 +38,6 @@
   background-color: #d0d0d0;
 }
 .login-card .register-link {
-  color: #1a40a7;
+  color: #13aa9a;
   text-decoration: underline;
 }/*# sourceMappingURL=login.css.map */
