--- a/app/client/src/styles/pages/note/note.css
+++ b/app/client/src/styles/pages/note/note.css
@@ -20,7 +20,7 @@
   cursor: pointer;
 }
 .note-title-container .note-username-container .note-username:hover {
-  color: #1a40a7;
+  color: #13aa9a;
 }
 .note-title-container .note-username-container .note-date {
   margin-left: auto;
