--- a/app/client/src/index.css
+++ b/app/client/src/index.css
@@ -55,14 +55,15 @@ input {
 }
 
 .pwd-requisites {
-  color: #e91818;
+  color: #c62424;
 }
 .pwd-requisites .valid {
   color: #12b828;
 }
 
 .error-message {
-  color: #e91818;
+  width: 80%;
+  color: #c62424;
   font-size: 18px;
   font-weight: normal;
   text-align: center;
@@ -126,7 +127,7 @@ input {
   cursor: pointer;
   border: 0;
   display: inline-block;
-  background-color: #1a40a7;
+  background-color: #13aa9a;
   padding: 0.75rem 0;
   text-align: center;
   width: 130px;
@@ -136,7 +137,7 @@ input {
   color: #dddddd;
 }
 .btn-tetiary:hover {
-  background-color: #132f7b;
+  background-color: #0e7c70;
   transform: scale(1.05);
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   transition: ease-in 0.3s;
@@ -146,7 +147,7 @@ input {
   cursor: pointer;
   border: 0;
   display: inline-block;
-  background-color: #e91818;
+  background-color: #c62424;
   padding: 0.75rem 0;
   text-align: center;
   width: 130px;
@@ -156,7 +157,7 @@ input {
   color: #dddddd;
 }
 .btn-error:hover {
-  background-color: #bc1212;
+  background-color: #9b1c1c;
   transform: scale(1.05);
   box-shadow: -1px 4px 20px 0px rgba(0, 0, 0, 0.75);
   transition: ease-in 0.3s;
