--- a/app/client/src/styles/components/Card/Card.scss
+++ b/app/client/src/styles/components/Card/Card.scss
@@ -10,6 +10,7 @@
   box-shadow: var.$small-box-shadow;
   flex-direction: column;
   width: fit-content;
+  min-width: 200px;
   background-color: var.$primary;
   color: var.$secondary;
 
