--- a/app/client/src/styles/components/Modal/Modal.css
+++ b/app/client/src/styles/components/Modal/Modal.css
@@ -1,28 +1,29 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .modal-bg {
-  position: absolute;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
-  height: 200vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .modal-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
-  margin: auto;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
   z-index: 3;
 }
 
 .modal {
-  position: relative;
+  position: fixed;
   max-width: 400px;
   width: 70%;
   display: flex;
@@ -34,6 +35,11 @@
   justify-content: center;
   align-items: center;
   border-radius: 5px;
+  z-index: 3;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media (max-width: 480px) {
   .modal {
@@ -42,7 +48,7 @@
   }
 }
 .modal .modal-close {
-  background-color: #e91818;
+  background-color: #c62424;
   margin-left: auto;
   padding: 0.5rem 0.8rem;
   width: -webkit-fit-content;
@@ -61,7 +67,7 @@
   cursor: pointer;
 }
 .modal .modal-close:hover {
-  background-color: #bc1212;
+  background-color: #9b1c1c;
   transform: scale(1.1);
   transition: ease 0.5s;
 }
@@ -72,11 +78,26 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 4px 0;
+  gap: 10px;
+}
+.modal .modal-fields label {
+  margin-left: 0.3rem;
+  font-weight: 300;
+}
+.modal .modal-fields textarea {
+  border: 2px solid #d2d2d2;
+  border-radius: 5px;
+  padding: 10px;
 }
 .modal .modal-fields input {
-  padding: 0.7rem 0;
+  border: 2px solid #d2d2d2;
+  padding: 0.7rem 10px;
+  border-radius: 5px;
   background-color: #ffffff;
+}
+
+.add-note-modal {
+  max-width: 800px;
 }
 
 .dialogue-box {
