--- a/app/client/src/styles/pages/dashboard/dashboard.css
+++ b/app/client/src/styles/pages/dashboard/dashboard.css
@@ -1,6 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .dashboard {
-  position: relative;
   min-height: 100vh;
   height: -webkit-max-content;
   height: -moz-max-content;
@@ -60,7 +59,7 @@
   width: fit-content;
 }
 .row .card .card-author:hover {
-  color: #1a40a7;
+  color: #13aa9a;
 }
 
 .profile {
@@ -88,15 +87,6 @@
   position: relative;
   transition: 0.4s ease-in;
 }
-.profile-container .profile-img:hover {
-  transition: 0.4s ease-in;
-  opacity: 0.7;
-}
-.profile-container .profile-img:hover .profile-img-logo {
-  opacity: 1;
-  transition: 0.4s ease-in;
-  pointer-events: none;
-}
 .profile-container .profile-img .profile-img-logo {
   position: absolute;
   margin: auto;
@@ -110,6 +100,15 @@
   height: 90px;
   opacity: 0;
   transition: 0.4s ease-in;
+}
+.profile-container .hover {
+  transition: 0.4s ease-in;
+  opacity: 0.7;
+}
+.profile-container .hover .profile-img-logo {
+  opacity: 1;
+  transition: 0.4s ease-in;
+  pointer-events: none;
 }
 .profile-container .profile-img img {
   width: 180px;
@@ -144,7 +143,7 @@
   width: fit-content;
 }
 .profile-container .profile-info .profile-name-container .profile-username:hover {
-  color: #1a40a7;
+  color: #13aa9a;
   cursor: pointer;
 }
 .profile-container .profile-info .profile-name-container button {
