--- a/app/client/src/styles/pages/dashboard/dashboard.scss
+++ b/app/client/src/styles/pages/dashboard/dashboard.scss
@@ -2,7 +2,6 @@
 @use '../../breakpoints' as break;
 
 .dashboard {
-  position: relative;
   min-height: 100vh;
   height: max-content;
   background-color: var.$secondary;
@@ -92,17 +91,6 @@
 
     transition: 0.4s ease-in;
 
-    &:hover {
-      transition: 0.4s ease-in;
-      opacity: 0.7;
-
-      .profile-img-logo {
-        opacity: 1;
-        transition: 0.4s ease-in;
-        pointer-events: none;
-      }
-    }
-
     .profile-img-logo {
       position: absolute;
       margin: auto;
@@ -116,6 +104,17 @@
       height: 90px;
       opacity: 0;
       transition: 0.4s ease-in;
+    }
+  }
+
+  .hover {
+    transition: 0.4s ease-in;
+    opacity: 0.7;
+
+    .profile-img-logo {
+      opacity: 1;
+      transition: 0.4s ease-in;
+      pointer-events: none;
     }
   }
 
