--- a/app/client/src/styles/pages/profile/profile.scss
+++ b/app/client/src/styles/pages/profile/profile.scss
@@ -52,4 +52,10 @@
       grid-template-columns: repeat(auto, 1fr);
     }
   }
+
+  .no-notes {
+    text-align: center;
+    font-size: 1.3rem;
+    color: #686868;
+  }
 }
