--- a/app/client/src/styles/components/Modal/Modal.css
+++ b/app/client/src/styles/components/Modal/Modal.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
+  z-index: 98;
   top: 0;
   left: 0;
   width: 100%;
@@ -35,11 +35,12 @@
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  z-index: 3;
+  z-index: 99;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
+  top: 20%;
 }
 @media (max-width: 480px) {
   .modal {
