--- a/app/client/src/styles/components/Navbar/Navbar.css
+++ b/app/client/src/styles/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 60px;
   background-color: #181818;
+  position: relative;
 }
 .navbar .container {
   display: flex;
@@ -15,6 +16,61 @@
 }
 .navbar .container .logout:hover {
   color: #13aa9a;
+}
+.navbar .container .user-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  align-items: center;
+}
+@media (max-width: 960px) {
+  .navbar .container .user-container {
+    display: none;
+  }
+}
+.navbar .container .user-container .user-info {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+}
+.navbar .container .user-container .user-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 1000px;
+}
+.navbar .container .user-container .user-info p {
+  font-weight: 300;
+  color: white;
+  font-size: 1.1rem;
+}
+.navbar .container .user-container .edit-links {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-color: #141414;
+  text-align: center;
+  width: 180px;
+  opacity: 0;
+  transition: 0.3s ease-in;
+  transform: translateY(-50px);
+}
+.navbar .container .user-container .edit-links .edit-link {
+  width: 100%;
+  cursor: pointer;
+  transition: 0.2s ease-in;
+  font-weight: 300;
+}
+.navbar .container .user-container .edit-links .edit-link:hover {
+  transition: 0.2s ease-in;
+  color: #13aa9a;
+}
+.navbar .container .user-container .hover {
+  opacity: 1;
+  transform: translateY(0);
+  transition: 0.3s ease-in;
 }
 .navbar .container .nav-links {
   display: flex;
@@ -29,7 +85,7 @@
     height: 100%;
     width: 100%;
     transition: 0.6s;
-    transform: translateY(-100vh);
+    transform: translateY(-110vh);
     align-items: center;
     justify-content: center;
     background-color: #181818;
@@ -37,6 +93,9 @@
     gap: 2rem 0;
     text-align: center;
   }
+}
+.navbar .container .nav-links .user-container {
+  display: none;
 }
 .navbar .container .nav-links a {
   font-weight: 300;
@@ -91,5 +150,62 @@ button {
   .responsive_nav {
     z-index: 99;
     transform: none !important;
+  }
+  .responsive_nav .user-container-mobile {
+    height: -webkit-min-content !important;
+    height: -moz-min-content !important;
+    height: min-content !important;
+    margin-top: 0 !important;
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 20px !important;
+    transition: ease-in 0.3s !important;
+  }
+  .responsive_nav .user-container-mobile .user-info {
+    flex-direction: column !important;
+  }
+  .responsive_nav .user-container-mobile .user-info p {
+    font-size: 1.4rem !important;
+    font-weight: 900 !important;
+  }
+  .responsive_nav .user-container-mobile .edit-links {
+    gap: 5px !important;
+    height: 0 !important;
+    overflow: hidden !important;
+    display: flex;
+    width: 200px !important;
+    font-size: 1.1rem !important;
+    font-weight: 300;
+    transition: 0.3s ease-in !important;
+    opacity: 0 !important;
+    transform: translateY(-50px) !important;
+    background-color: #181818 !important;
+  }
+  .responsive_nav .user-container-mobile .edit-links .edit-link {
+    background-color: #141414;
+  }
+  .responsive_nav .user-container-mobile .hover {
+    height: auto !important;
+    display: flex !important;
+    transition: ease-in 0.3s !important;
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+  }
+  .responsive_nav .user-container-mobile svg {
+    background-color: #13aa9a;
+    font-size: 1.5rem;
+    padding: 0.4rem;
+    transition: ease-in 0.3s !important;
+    transform: rotate(180deg) !important;
+  }
+  .responsive_nav .user-container-mobile svg .hover {
+    transition: ease-in 0.3s !important;
+    transform: rotate(180deg) !important;
+  }
+  .responsive_nav .user-container-mobile img {
+    padding: 0.3rem !important;
+    border: 5px solid white !important;
+    width: 150px !important;
+    height: 150px !important;
   }
 }/*# sourceMappingURL=Navbar.css.map */
