FIX: Migrated backend deployment from Heroku to Firebase

--- a/app/client/src/styles/components/Navbar/Navbar.scss
+++ b/app/client/src/styles/components/Navbar/Navbar.scss
@@ -63,6 +63,7 @@
         opacity: 0;
         transition: 0.3s ease-in;
         transform: translateY(-50px);
+        pointer-events: none;
 
         .edit-link {
           width: 100%;
@@ -81,6 +82,7 @@
         opacity: 1;
         transform: translateY(0);
         transition: 0.3s ease-in;
+        pointer-events: all;
       }
     }
 
