--- a/app/client/src/styles/components/Navbar/Navbar.css
+++ b/app/client/src/styles/components/Navbar/Navbar.css
@@ -56,6 +56,7 @@
   opacity: 0;
   transition: 0.3s ease-in;
   transform: translateY(-50px);
+  pointer-events: none;
 }
 .navbar .container .user-container .edit-links .edit-link {
   width: 100%;
@@ -71,6 +72,7 @@
   opacity: 1;
   transform: translateY(0);
   transition: 0.3s ease-in;
+  pointer-events: all;
 }
 .navbar .container .nav-links {
   display: flex;
