--- a/app/client/src/styles/components/Modal/Modal.css
+++ b/app/client/src/styles/components/Modal/Modal.css
@@ -40,7 +40,8 @@
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  top: 20%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 @media (max-width: 480px) {
   .modal {
