--- a/app/client/src/styles/components/Modal/Modal.scss
+++ b/app/client/src/styles/components/Modal/Modal.scss
@@ -42,7 +42,8 @@
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  top: 20%;
+  top: 50%;
+  transform: translateY(-50%);
 
   @include break.sm {
     min-width: 0;
